infra/docmost/service-postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: docmost-postgres
spec:
  clusterIP: None
  selector:
    app: docmost-postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
