infra/docmost/service-redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: docmost-redis
spec:
  clusterIP: None
  selector:
    app: docmost-redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
